[tool.poetry]
name = "tracktrace"
version = "0.1.0"
description = ""
authors = ["Dhruv Kar <dhruv@wints.org>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.1"
feedparser = "^6.0.2"
pandas = "^1.1.4"
pendulum = "^2.1.2"
bs4 = "^0.0.1"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
