[tool.poetry]
name = "tracktrace"
version = "0.0.6"
description = "Track and trace shipping containers across all major steamship lines"
authors = ["Dhruv Kar <dhruv@wints.org>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/dhruvkar/tracktrace"
repository = "https://github.com/dhruvkar/tracktrace"
documentation = "https://github.com/dhruvkar/tracktrace"
keywords = ["shipping container", "track", "trace", "cargo tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.1"
feedparser = "^6.0.2"
pandas = "^1.1.4"
pendulum = "^2.1.2"
bs4 = "^0.0.1"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
